fixed java options required for panama